--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -11,6 +11,7 @@
                 "DEBUG": "azure-functions-pack:*",
                 "MYSQLUSER": "root",
                 "MYSQLPASSWORD": "my-secret-pw",
+                "MYSQLDATABASE": "todos",
                  "MYSQLSERVER": "localhost"
             },
             "name": "DEBUG",
